--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@nrk/core-dialog": "^3.0.7",
     "classnames": "^2.3.1",
     "gh-pages": "^3.1.0",
     "prettier": "^2.3.0"
