--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nrk/core-dialog": "^3.0.7",
     "classnames": "^2.3.1",
     "gh-pages": "^3.1.0",
+    "node-sass": "^6.0.0",
     "prettier": "^2.3.0"
   }
 }
